tests/neg/i3470.scala
trait Factory[T <: Int]{
  def size: T
  def create: Array[T] = Array.ofDim(size) // error
}
